--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,18 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start": "nodemon index.js"
   },
   "dependencies": {
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "bulma": "^0.9.4",
-    "@fortawesome/fontawesome-free": "^6.3.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
