--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
