--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "bcryptjs": "^2.4.3",
-    "stripe":"^12.1.1"
+    "stripe":"^12.1.1",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
